updating initial experiment

--- a/source_id.ipynb
+++ b/source_id.ipynb
@@ -61,7 +61,7 @@
     "    'M_val': int(0.2 * M),    # Samples selected for validation\n",
     "    'M_test': int(0.1 * M),   # Samples selected for test\n",
     "    'src_t': 'random',          # 'random' or 'constant'\n",
-    "    'max_src_node': 10,  # 10           # Maximum index of nodes allowed to be sources\n",
+    "    'max_src_node': 20,  # 10           # Maximum index of nodes allowed to be sources\n",
     "    'n_sources': 1,              # Maximum Number of source nodes\n",
     "    'n_p': .05,                 # Normalized noise power\n",
     "    'max_GSO': 100,              # Maximum index of GSOs involved in the diffusion\n",
@@ -91,7 +91,7 @@
     "    range_GSO = np.arange(d_p['min_GSO'], d_p['max_GSO'])\n",
     "    gsos_idx = np.random.choice(range_GSO, size=d_p['n_GSOs'], replace=False)\n",
     "    sel_GSOs = GSOs[gsos_idx]\n",
-    "    signals_t, srcs_t = dagu.create_diff_data(d_p['M'], sel_GSOs, d_p['max_src_node'], d_p['n_p'],\n",
+    "    signals_t, srcs_t, _ = dagu.create_diff_data(d_p['M'], sel_GSOs, d_p['max_src_node'], d_p['n_p'],\n",
     "                                                d_p['n_sources'], src_t=d_p['src_t'], torch_tensor=True,\n",
     "                                                mask_sources=True)\n",
     "    labels_t = torch.argmax(torch.abs(srcs_t), axis=1)\n",
@@ -239,74 +239,39 @@
    ],
    "source": [
     "Exps = [\n",
-    "    # # DAG based architectures\n",
-    "    # {'arc_p': {'arch': FB_DAGConv, 'GSO': 'GSOs'}, 'leg': 'FB-DAGCNN'},\n",
-    "    # # {'arc_p': {'arch': FB_DAGConv, 'GSO': 'sel_GSOs'}, 'leg': 'FB-DAGCNN-Prior'},\n",
-    "    # {'arc_p': {'arch': FB_DAGConv, 'GSO': 'rnd_GSOs', 'n_gsos': 30}, 'leg': 'DCN-30'},\n",
-    "    # {'arc_p': {'arch': FB_DAGConv, 'GSO': 'rnd_GSOs', 'n_gsos': 20}, 'leg': 'DCN-20'},\n",
-    "    # {'arc_p': {'arch': FB_DAGConv, 'GSO': 'rnd_GSOs', 'n_gsos': 10}, 'leg': 'DCN-10'},\n",
-    "    \n",
-    "    # # {'arc_p': {'arch': DAGConv, 'GSO': 'GSOs'}, 'leg': 'DAGCNN'},\n",
-    "    # # {'arc_p': {'arch': DAGConv, 'GSO': 'sel_GSOs'}, 'leg': 'DAGCNN-Prior'},\n",
-    "    # # {'arc_p': {'arch': DAGConv, 'GSO': 'rnd_GSOs', 'n_gsos': 30}, 'leg': 'DAGCNN-Rnd-30'},\n",
+    "    # My Model\n",
+    "    {'arc_p': {'arch': FB_DAGConv, 'GSO': 'GSOs'}, 'leg': 'DCN'},\n",
+    "    {'arc_p': {'arch': FB_DAGConv, 'GSO': 'rnd_GSOs', 'n_gsos': 30}, 'leg': 'DCN-30'},\n",
+    "    {'arc_p': {'arch': FB_DAGConv, 'GSO': 'rnd_GSOs', 'n_gsos': 10}, 'leg': 'DCN-10'},\n",
     "\n",
-    "    # Linear models\n",
-    "    {'arc_p': {'arch': LinDAGClassModel, 'GSO': 'GSOs', 'transp': False}, 'leg': 'Linear'},\n",
-    "    # {'arc_p': {'arch': LinDAGRegModel, 'GSO': 'rnd_GSOs', 'n_gsos': 30}, 'leg': 'Linear-Rnd-30'},\n",
+    "    # My Model - Transposed\n",
+    "    {'arc_p': {'arch': FB_DAGConv, 'GSO': 'GSOs', 'transp': True}, 'leg': 'DCN-T'},\n",
+    "    {'arc_p': {'arch': FB_DAGConv, 'GSO': 'rnd_GSOs', 'n_gsos': 30, 'transp': True}, 'leg': 'DCN-30-T'},\n",
+    "    {'arc_p': {'arch': FB_DAGConv, 'GSO': 'rnd_GSOs', 'n_gsos': 10, 'transp': True}, 'leg': 'DCN-10-T'},\n",
+    "\n",
+    "    # Linear baselines\n",
+    "    {'arc_p': {'arch': LinDAGClassModel, 'GSO': 'GSOs'}, 'leg': 'Linear'},\n",
+    "    {'arc_p': {'arch': LinDAGClassModel, 'GSO': 'rnd_GSOs', 'n_gsos': 30}, 'leg': 'Linear-30'},\n",
+    "    {'arc_p': {'arch': LinDAGClassModel, 'GSO': 'rnd_GSOs', 'n_gsos': 10}, 'leg': 'Linear-10'},\n",
     "    {'arc_p': {'arch': LinDAGClassModel, 'GSO': 'GSOs', 'transp': True}, 'leg': 'Linear-T'},\n",
-    "    # {'arc_p': {'arch': LinDAGRegModel, 'GSO': 'rnd_GSOs', 'n_gsos': 30, 'transp': True},\n",
-    "    #  'leg': 'Linear-T-Rnd-30'},\n",
+    "    {'arc_p': {'arch': LinDAGClassModel, 'GSO': 'rnd_GSOs', 'n_gsos': 30, 'transp': True}, 'leg': 'Linear-30-T'},\n",
+    "    {'arc_p': {'arch': LinDAGClassModel, 'GSO': 'rnd_GSOs', 'n_gsos': 10, 'transp': True}, 'leg': 'Linear-10-T'},\n",
     "\n",
-    "    # DAG based architectures with Transpose GSOs\n",
-    "    {'arc_p': {'arch': FB_DAGConv, 'GSO': 'GSOs', 'transp': True}, 'leg': 'FB-DAGCNN-T'},\n",
-    "    # {'arc_p': {'arch': FB_DAGConv, 'GSO': 'sel_GSOs'}, 'transp': True, 'leg': 'FB-DAGCNN-Prior-T'},\n",
-    "    # {'arc_p': {'arch': FB_DAGConv, 'GSO': 'rnd_GSOs', 'n_gsos': 30, 'transp': True}, \n",
-    "    #  'leg': 'DCN-30-T'},\n",
-    "    # {'arc_p': {'arch': FB_DAGConv, 'GSO': 'rnd_GSOs', 'n_gsos': 20, 'transp': True}, \n",
-    "    #  'leg': 'DCN-20-T'},\n",
-    "    {'arc_p': {'arch': FB_DAGConv, 'GSO': 'rnd_GSOs', 'n_gsos': 10, 'transp': True}, \n",
-    "     'leg': 'DCN-10-T'},\n",
-    "\n",
-    "    # # {'arc_p': {'arch': DAGConv, 'GSO': 'GSOs', 'transp': True}, 'leg': 'DAGCNN-T'},\n",
-    "    # # {'arc_p': {'arch': DAGConv, 'GSO': 'sel_GSOs', 'transp': True}, 'leg': 'DAGCNN-Prior-T'},\n",
-    "    # # {'arc_p': {'arch': DAGConv, 'GSO': 'rnd_GSOs', 'n_gsos': 30, 'transp': True}, 'leg': 'DAGCNN-Rnd-30-T'},\n",
-    " \n",
-    "    # # Baselines\n",
-    "    # {'arc_p': {'arch': MyGCNN, 'GSO': 'A'}, 'leg': 'GNN-A'},\n",
-    "    # {'arc_p': {'arch': MyGCNN, 'GSO': 'W'}, 'leg': 'GNN-W'},\n",
-    "    # {'arc_p': {'arch': MyGCNN, 'GSO': 'A', 'transp': True}, 'leg': 'GNN-A-T'},\n",
-    "    # {'arc_p': {'arch': MyGCNN, 'GSO': 'W', 'transp': True}, 'leg': 'GNN-W-T'},\n",
-    "\n",
-    "    # {'arc_p': {'arch': GAT, 'GSO': 'A-dgl', 'n_heads': 2, 'hid_dim': 16,'gat_params': {'attn_drop': 0}},\n",
-    "    #   'leg': 'GAT-A'},\n",
-    "    # {'arc_p': {'arch': GAT, 'GSO': 'A-dgl', 'transp': True, 'n_heads': 2, 'hid_dim': 16,'gat_params': {'attn_drop': 0}},\n",
-    "    #   'leg': 'GAT-A-T'},\n",
-    "    # {'arc_p': {'arch': GraphSAGE, 'GSO': 'A-dgl', 'hid_dim': 16, 'agg': 'mean', 'transp': False,},\n",
-    "    #  'leg': 'GraphSAGE-A'},\n",
-    "    # {'arc_p': {'arch': GraphSAGE, 'GSO': 'A-dgl', 'hid_dim': 16, 'agg': 'mean', 'transp': True,},\n",
-    "    #  'leg': 'GraphSAGE-A-T'},\n",
-    "    # {'arc_p': {'arch': GIN, 'GSO': 'A-dgl', 'hid_dim': 16, 'agg': 'sum', 'transp': False}, 'leg': 'GIN-A'},\n",
-    "    # {'arc_p': {'arch': GIN, 'GSO': 'A-dgl', 'hid_dim': 16, 'agg': 'sum', 'transp': True}, 'leg': 'GIN-A-T'},\n",
-    "    # {'arc_p': {'arch': MLP, 'GSO': None}, 'mod_p': {}, 'leg': 'MLP'},    \n",
-    "]\n",
+    "    # GNN Baselines\n",
+    "    {'arc_p': {'arch': FB_DAGConv, 'GSO': 'A_pows', 'K': 2, 'transp': True}, 'leg': 'FB-GCNN-2'},\n",
+    "    {'arc_p': {'arch': FB_DAGConv, 'GSO': 'A_pows', 'K': 3, 'transp': True}, 'leg': 'FB-GCNN-3'},\n",
+    "    {'arc_p': {'arch': MyGCNN, 'GSO': 'A', 'transp': True}, 'leg': 'GNN-A'},\n",
+    "    {'arc_p': {'arch': MyGCNN, 'GSO': 'W', 'transp': True}, 'leg': 'GNN-W'},\n",
+    "    {'arc_p': {'arch': GAT, 'GSO': 'A-dgl', 'transp': True, 'n_heads': 2, 'hid_dim': 16, 'gat_params': {'attn_drop': 0}},\n",
+    "     'leg': 'GAT'},\n",
+    "    {'arc_p': {'arch': GraphSAGE, 'GSO': 'A-dgl', 'transp': True, 'hid_dim': 16, 'agg': 'mean'}, 'leg': 'GraphSAGE-A'},\n",
+    "    {'arc_p': {'arch': GraphSAGE, 'GSO': 'W-dgl', 'transp': True, 'hid_dim': 16, 'agg': 'mean'}, 'leg': 'GraphSAGE-W'},\n",
+    "    {'arc_p': {'arch': GIN, 'GSO': 'A-dgl', 'transp': True, 'hid_dim': 16, 'agg': 'sum'}, 'leg': 'GIN-A'},\n",
+    "    {'arc_p': {'arch': GIN, 'GSO': 'W-dgl', 'transp': True, 'hid_dim': 16, 'agg': 'sum'}, 'leg': 'GIN-W'},\n",
+    "    {'arc_p': {'arch': MLP, 'GSO': None}, 'mod_p': {}, 'leg': 'MLP'},    \n",
+    "    ]\n",
     "\n",
     "acc, times = run_exp(data_p, default_arch_p, default_mod_p, Exps)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# No noise\n",
-    "if SAVE:\n",
-    "    file_name = PATH + f'init_exp'\n",
-    "    np.savez(file_name, acc=acc, times=times)\n",
-    "    print('SAVED FILE:', file_name)  \n",
-    "\n",
-    "leg = [exp['leg'] for exp in Exps]\n",
-    "utils.display_data(leg, acc, None, times, metric_label='Acc')"
    ]
   },
   {
